[package]
name = "nft-solana-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_solana_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
# solana-program = "1.15.2"
# spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"]}
